<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Developer</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="libraries">Librerías</string>
    <string name="snippets">Snippets</string>
    <string name="about">Créditos</string>
    <string name="online_tools">Herramientas online</string>
    <string name="image_resolution">Resolución de iconos</string>
    <string name="dpi">DPI</string>
    <string name="xxhdpi">XXHDPI</string>
    <string name="xhdpi">XHDPI</string>
    <string name="hdpi">HDPI</string>
    <string name="mdpi">MDPI</string>
    <string name="ldpi">LDPI</string>
    <string name="tvdpi">TVDPI</string>
    <string name="width">Ancho</string>
    <string name="height">Alto</string>

</resources>
